Fix #40 by adding a test with spaces